Fix: Spacing of form fields

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,7 @@ body {
 }
 label {
   display: block;
+  padding: 5px;
 }
 input[type="button"] {
   font: inherit;
@@ -10,6 +11,8 @@ input[type="button"] {
 .signin-status {
   display: flex;
   flex-direction: row-reverse;
+  align-items: baseline;
+  height: 24px;
   font-size: 11px;
 }
 .heading {
